Add demo workflow with greeting job

--- a/.github/workflows/demo-main.yml
+++ b/.github/workflows/demo-main.yml
@@ -1,1 +1,10 @@
-
+name: demo workflow
+on: workflow_dispatch
+jobs:
+  demo: 
+    name: demo job
+    runs-on: ubuntu-latest
+    steps: 
+    - name: Greeting
+      run: |
+        echo "hello"
