Add steps to list and read package.json file

--- a/.github/workflows/demo-main.yml
+++ b/.github/workflows/demo-main.yml
@@ -8,3 +8,7 @@ jobs:
     - name: Greeting
       run: |
         echo "hello"
+    - name: list file
+      run: ls
+    - name: read file
+      run: cat package.json
