--- a/.github/workflows/demo-main.yml
+++ b/.github/workflows/demo-main.yml
@@ -5,6 +5,8 @@ jobs:
     name: demo job
     runs-on: ubuntu-latest
     steps: 
+    - name: Checkout
+      uses: actions/checkout@v6.0.1
     - name: Greeting
       run: |
         echo "hello"
