--- a/.github/workflows/demo-main.yml
+++ b/.github/workflows/demo-main.yml
@@ -1,5 +1,12 @@
 name: demo workflow
-on: workflow_dispatch
+on: 
+  push:
+    branches:
+    - main
+    - features/*
+  pull_request:
+    branches:
+    - main
 jobs:
   demo: 
     name: demo job
