--- a/.github/workflows/demo-main.yml
+++ b/.github/workflows/demo-main.yml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/checkout@v6.0.1
     - name: Greeting
       run: |
-        echo "hello"
+        echo "hi"
     - name: list file
       run: ls
     - name: read file
