--- a/.github/workflows/demo-main.yml
+++ b/.github/workflows/demo-main.yml
@@ -14,10 +14,13 @@ jobs:
     steps: 
     - name: Checkout
       uses: actions/checkout@v6.0.1
-    - name: Greeting
+    - name: set nodejs
       run: |
-        echo "hi"
-    - name: list file
-      run: ls
-    - name: read file
-      run: cat package.json
+        curl -s https://deb.nodesource.com/setup_16.x | sudo bash
+        sudo apt install nodejs -y
+    - name: instal dependency
+      run: |
+        npm install
+    - name: set build
+      run: |
+          npm run build
