--- a/.github/workflows/demo-main.yml
+++ b/.github/workflows/demo-main.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps: 
     - name: Checkout
-      uses: actions/checkout@v16.x
+      uses: actions/checkout@v6.1.0
 
     - name: Setup Node.js environment
       uses: actions/setup-node@v6.1.0
