--- a/.github/workflows/demo-main.yml
+++ b/.github/workflows/demo-main.yml
@@ -24,7 +24,8 @@ jobs:
       uses: actions/cache@v5.0.1
       with:
         # A list of files, directories, and wildcard patterns to cache and restore
-        path: /home/runner/.npm
+        path: ~/.npm
+              node_module
         # An explicit key for restoring and saving the cache
         key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
       
