--- a/.github/workflows/demo-main.yml
+++ b/.github/workflows/demo-main.yml
@@ -37,6 +37,23 @@ jobs:
     - name: instal dependency
       run: |
         npm install
+
+    - name: Upload a Build Artifact
+      uses: actions/upload-artifact@v6.0.0
+      with:
+        # Artifact name
+        name: build-{{ GITHUB.RUN_ID }}
+        # A file, directory or wildcard pattern that describes what to upload
+        path: build/
+        # The desired behavior if no files are found using the provided path.
+   
+
+      
+
+
+
+
+        
     - name: set build
       run: |
           npm run build
