--- a/.github/workflows/demo-main.yml
+++ b/.github/workflows/demo-main.yml
@@ -42,10 +42,20 @@ jobs:
       uses: actions/upload-artifact@v6.0.0
       with:
         # Artifact name
-        name: build-{{ GITHUB.RUN_ID }}
+        name: build-{{ github.run_id }}
         # A file, directory or wildcard pattern that describes what to upload
         path: build/
         # The desired behavior if no files are found using the provided path.
+
+    - name: Download a Build Artifact
+      uses: actions/download-artifact@v7.0.0
+      with: 
+        name: download-{{ github.run_id }}
+   
+    # Destination path. Supports basic tilde expansion. Defaults to $GITHUB_WORKSPACE
+        path: download-build/
+      
+    
    
 
       
