--- a/.github/workflows/demo-main.yml
+++ b/.github/workflows/demo-main.yml
@@ -42,7 +42,7 @@ jobs:
       uses: actions/upload-artifact@v6.0.0
       with:
         # Artifact name
-        name: build-{{ github.run_id }}
+        name: build-${{ github.run_id }}
         # A file, directory or wildcard pattern that describes what to upload
         path: build/
         # The desired behavior if no files are found using the provided path.
@@ -50,20 +50,12 @@ jobs:
     - name: Download a Build Artifact
       uses: actions/download-artifact@v7.0.0
       with: 
-        name: download-{{ github.run_id }}
+        name: download-${{ github.run_id }}
    
     # Destination path. Supports basic tilde expansion. Defaults to $GITHUB_WORKSPACE
         path: download-build/
       
-    
-   
-
-      
-
-
-
-
-        
+           
     - name: set build
       run: |
           npm run build
