--- a/.github/workflows/demo-main.yml
+++ b/.github/workflows/demo-main.yml
@@ -40,7 +40,7 @@ jobs:
 
     - name: set build
       run: |
-        npn run build
+        npm run build
 
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v6.0.0
