--- a/.github/workflows/demo-main.yml
+++ b/.github/workflows/demo-main.yml
@@ -9,6 +9,7 @@ on:
     - main
 env: 
   name: sachi
+  var: Latest
 
 
 jobs:
@@ -19,10 +20,13 @@ jobs:
     - name: Checkout ${{ env.name }}
       uses: actions/checkout@v6.0.1
 
-    - name: Setup Node.js environment $name
+    - name: Setup Node.js environment ${{ env.name }}
       uses: actions/setup-node@v6.1.0
       with: 
         node-version: 16.x
+
+    - name: check
+      run: $var
 
     # - name: Cache
     #   uses: actions/cache@v5.0.1
