--- a/.github/workflows/demo-main.yml
+++ b/.github/workflows/demo-main.yml
@@ -26,7 +26,7 @@ jobs:
         node-version: 16.x
 
     - name: check
-      run: $var
+      run: echo $var
 
     # - name: Cache
     #   uses: actions/cache@v5.0.1
