--- a/.github/workflows/demo-main.yml
+++ b/.github/workflows/demo-main.yml
@@ -8,8 +8,8 @@ on:
     branches:
     - main
 env: 
-  name: sachi
-  var: Latest
+  app: Todo
+  managed_by: owner
 
 
 jobs:
@@ -17,16 +17,16 @@ jobs:
     name: demo job
     runs-on: ubuntu-latest
     steps: 
-    - name: Checkout ${{ env.name }}
+    - name: Checkout ${{ env.app }}
       uses: actions/checkout@v6.0.1
 
-    - name: Setup Node.js environment ${{ env.name }}
+    - name: Setup Node.js environment ${{ env.managed_by }}
       uses: actions/setup-node@v6.1.0
       with: 
         node-version: 16.x
 
     - name: check
-      run: echo $var
+      run: echo $app
 
     # - name: Cache
     #   uses: actions/cache@v5.0.1
