Fix indentation in second.yml workflow

--- a/.github/workflows/second.yml
+++ b/.github/workflows/second.yml
@@ -3,7 +3,7 @@ on: push
 jobs:
   my-job:
     name: 2nd pipeline
-  run_on: ubuntu-latest
-  steps:
-    - name: check
-      run: echo "satsri"
+    runs-on: ubuntu-latest
+    steps:
+      - name: check
+        run: echo "satsri"
