--- a/.github/workflows/demo-main.yml
+++ b/.github/workflows/demo-main.yml
@@ -17,7 +17,7 @@ jobs:
     name: demo job
     runs-on: ubuntu-latest
     steps: 
-    - name: Checkout ${{ env.second }}
+    - name: Checkout ${{ var.second }}
       uses: actions/checkout@v6.0.1
 
     - name: Setup Node.js environment ${{ env.managed_by }}
