--- a/.github/workflows/demo-main.yml
+++ b/.github/workflows/demo-main.yml
@@ -7,9 +7,7 @@ on:
   pull_request:
     branches:
     - main
-env: 
-  app: Todo
-  managed_by: owner
+
 
 
 jobs:
@@ -20,13 +18,13 @@ jobs:
     - name: Checkout ${{ var.second }}
       uses: actions/checkout@v6.0.1
 
-    - name: Setup Node.js environment ${{ env.managed_by }}
+    - name: Setup Node.js environment 
       uses: actions/setup-node@v6.1.0
       with: 
         node-version: 16.x
 
     - name: check
-      run: echo $app
+      run: echo "app"
 
     # - name: Cache
     #   uses: actions/cache@v5.0.1
