--- a/.github/workflows/demo-main.yml
+++ b/.github/workflows/demo-main.yml
@@ -15,7 +15,7 @@ jobs:
     name: demo job
     runs-on: ubuntu-latest
     steps: 
-    - name: Checkout ${{ var.second }}
+    - name: Checkout ${{ vars.second }}
       uses: actions/checkout@v6.0.1
 
     - name: Setup Node.js environment 
