--- a/.github/workflows/second.yml
+++ b/.github/workflows/second.yml
@@ -6,4 +6,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: check
-        run: echo "satsri ${{ var.second }}"
+        run: echo "satsri ${{ vars.second }}"
