--- a/.github/workflows/demo-main.yml
+++ b/.github/workflows/demo-main.yml
@@ -13,7 +13,7 @@ jobs:
     name: demo job
     runs-on: ubuntu-latest
     steps: 
-    - name: Checkout ${{ vars.second }}-{{  inputs.environment  }} 
+    - name: Checkout ${{ vars.second }}-${{  inputs.environment  }} 
       uses: actions/checkout@v6.0.1
 
     - name: Setup Node.js environment 
